# neighborlist-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PYTHON_API.md  README.md  RUST_API.md  build.rs  neighborlist_rs.pyi  pyproject.toml  spec.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: baseline.py  baseline_results.json  batch_bench.py  batch_radius_benchmark.py  batch_results.json  benchmark_EPYC7R13.txt  benchmark_grace.txt  compare_machines.py  comprehensive_benchmark.py  final_benchmark.py  plot_results.py  scaling.py  scaling_results.json  small_systems.py  small_systems_baseline.json  verify_libs.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/ase_integration/: spec.md
conductor/archive/batched_processing/: plan.md  spec.md
conductor/archive/benchmarking_20260106/: plan.md  spec.md
conductor/archive/codebase_optimization_20260103/: spec.md
conductor/archive/codebase_robustness_and_ergonomics/: plan.md
conductor/archive/core_neighborlist_20260103/: metadata.json  spec.md
conductor/archive/github_actions_ci_pipeline_20260105/: plan.md
conductor/archive/multi_cutoff_support/: plan.md  spec.md
conductor/archive/pure_rust_api_20260111/: metadata.json
conductor/archive/small_system_optimization_20260105/: plan.md
conductor/tracks/ase_integration/: plan.md
conductor/tracks/batched_processing/: plan.md
conductor/tracks/benchmarking_20260106/: metadata.json
conductor/tracks/codebase_optimization_20260103/: metadata.json  plan.md
conductor/tracks/codebase_robustness_and_ergonomics/: plan.md  spec.md
conductor/tracks/core_neighborlist_20260103/: plan.md
conductor/tracks/github_actions_ci_pipeline_20260105/: metadata.json  plan.md  spec.md
conductor/tracks/pure_rust_api_20260111/: plan.md  spec.md
conductor/tracks/small_system_optimization_20260105/: metadata.json  plan.md  spec.md
docs/: review_codex_2026-01-05.md  review_gemini_20260105.md
src/: api.rs  batch.rs  cell.rs  config.rs  lib.rs  python_api.rs  search.rs  single.rs
tests/: benchmark.py  comprehensive_benchmark.py  generate_data.py  profile_trace.py  test_api_extensions.py  test_api_structure.rs  test_ase.py  test_basic.py  test_batch.py  test_batch_system.rs  test_bug_002_fix.py  test_disjoint.py  test_ergonomics.py  test_issue_1.py  test_memory_layout.py  test_single_system.rs  test_validation.py
tests/data/: ethanol_1000.xyz  ethanol_10000.xyz  ethanol_20000.xyz  isolated_100.xyz  isolated_1000.xyz  isolated_10000.xyz  isolated_20000.xyz  isolated_two_clusters.xyz
