[package]
name = "neighborlist-rs"
version = "0.1.0"
edition = "2024"
authors = ["Conductor <conductor@example.com>"]
description = "High-performance neighborlist construction for atomistic systems"
license = "MIT OR Apache-2.0"

[lib]
name = "neighborlist_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27.0"
rayon = "1.10.0"
nalgebra = { version = "0.33.0", features = ["bytemuck"] }
thiserror = "1.0.61"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wide = "0.7.26"
bytemuck = { version = "1.16.1", features = ["derive"] }
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
approx = "0.5.1"
proptest = "1.4.0"

